@startuml
!define DARKBLUE
!includeurl https://raw.githubusercontent.com/Drakemor/RedDress-PlantUML/master/style.puml

package "models" #799986 {
  User o-- Card
  User o-- Phone
}

class User {
    - String firstName
    - String lastName
    - int sex
    - char[] login
    - char[] password
    - ArrayList<Card> cardArrayList
    - ArrayList<Phone> phoneArrayList
    - String role
}

class Card {
    - long numberCard
    - int cardEndDataMonth
    - int cardEndDataYear
    - int CVC2
}

class Phone {
    - String phoneNumber
}

class System {
}


@enduml